ajout des filtres de tableaux infra départementaux -> début

--- a/0_about.Rmd
+++ b/0_about.Rmd
@@ -8,6 +8,7 @@ output: html_document
 library(BAMMtools)
 library(glue)
 library(HatchedPolygons)
+library(crosstalk)
 library(shiny)
 library(shinyWidgets)
 library(shinydashboard)
